# seal-roar-detection

./: .gitignore  CLAUDE.md  README.md  annotator.py  crossval.py  find_unannotated.py  prepare.py  program.md  pyproject.toml  results.tsv  train.py
annotations/: Lasqueti_Nov2017Pv_annotationsMar19_RSL.csv
research/: autoresearch.md  background.md  pamguard.md  training_plans.md
results/: best_model.pt
