[project]
name = "seal-roar-detection"
version = "0.1.0"
description = "Harbour seal roar detection from underwater recordings"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
