[project]
name = "seal-roar-detection"
version = "0.1.0"
description = "Harbour seal roar detection from underwater recordings"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "torchcodec>=0.4",
    "soundfile>=0.12",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "gradio>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
